refactor(collections): use SequencedCollection accessors
Replace List index access with getFirst() and getLast() where the
surrounding code already establishes the collection is non-empty.

Leave JsonNode get(int) call sites unchanged because they are not
SequencedCollection implementations.

mvn verify attempted; fails in unrelated modules due to existing/local
environment issues.